feat: added html for profile modal

--- a/index.html
+++ b/index.html
@@ -103,5 +103,19 @@
     <p class="footer__copyright">© 2020 Around The U.S.</p>
   </footer>
 
+  <div class="modal">
+    <div class="modal__container">
+      <button class="modal__close-btn">close me</button>
+      <form class="form" action="#">
+        <span class="form__label">Name</span>
+        <input class="form__input" type="text" value="Kate">
+
+        <span class="form__label">Title</span>
+        <input class="form__input" type="text" value="Fisher">
+        <button class="form__close-button" type="submit">Save</button>
+      </form>
+    </div>
+  </div>
+
 </body>
 </html>
