--- a/index.html
+++ b/index.html
@@ -105,19 +105,18 @@
 
   <div class="modal">
     <div class="modal__container">
+      <h2 class="modal__title">Edit profile</h2>
       <form class="form" action="#">
-        <span class="form__label">Name</span>
-        <input class="form__input" type="text" value="Kate">
+        <input class="form__input form__input_type_name" type="text" value="Kate">
 
-        <span class="form__label">Title</span>
-        <input class="form__input" type="text" value="Fisher">
-        <button class="form__close-button" type="submit">Save</button>
+        <input class="form__input form__input_type_title" type="text" value="Fisher">
+        <button class="form__save-btn" type="submit">Save</button>
       </form>
 
-      <button class="modal__close-btn">close me</button>
+      <button class="modal__close-btn">&plus;</button>
     </div>
   </div>
 
-  
+  <script src="index.js"></script>
 </body>
 </html>
