style: header + profile section + made page block GRID

--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
   <main class="content">
 
     <section class="profile">
-      <img class="profile__avatar" src="./images/avatar_image-min.jpg" alt="account image">
 
       <div class="profile__info">
-        <p class="profile__name">Jacques Cousteau</p>
-        <button class="profile__edit-btn">
+        <img class="profile__avatar" src="./images/avatar_image-min.jpg" alt="account image">
+
+        <div class="profile__data">
+          <p class="profile__name">Jacques Cousteau</p>
+          <button class="profile__edit-btn">
           <img class="profile__edit-icon" src="./images/pencil.svg" alt="edit button icon">
-        </button>
-        <p class="profile__title">Explorer</p>
+         </button>
+         <p class="profile__title">Explorer</p>
+        </div>
       </div>
 
       <button class="profile__add-btn">
