--- a/index.html
+++ b/index.html
@@ -18,22 +18,19 @@
   <main class="content">
 
     <section class="profile">
+      <img class="profile__avatar" src="./images/avatar_image-min.jpg" alt="account image">
 
       <div class="profile__info">
-        <img class="profile__avatar" src="./images/avatar_image-min.jpg" alt="account image">
-
-        <div class="profile__data">
-          <p class="profile__name">Jacques Cousteau</p>
-          <button class="profile__edit-btn">
-            <img class="profile__edit-icon" src="./images/pencil.svg" alt="edit button icon">
-         </button>
-         <p class="profile__title">Explorer</p>
-        </div>
+        <p class="profile__name">Jacques Cousteau
+          <span class="profile__edit-container">
+            <button class="profile__edit-btn"></button>
+          </span>
+        </p>
+        
+        <p class="profile__title">Explorer</p>
       </div>
 
-      <button class="profile__add-btn">
-        <img class="profile__add-icon" src="./images/plus_symbol.svg" alt="add button icon">
-      </button>
+      <button class="profile__add-btn"></button>
     </section>
 
     <section class="photos">
