refactor: mod HTML code to include all modals, repaired profile edit modal

--- a/index.html
+++ b/index.html
@@ -40,14 +40,42 @@
     <p class="footer__copyright">© 2020 Around The U.S.</p>
   </footer>
 
-  <!-- MODAL TEMPLATE -->
-  <template class="modal-template">
-    <div class="modal">
-      <div class="modal__container">
-        <button class="modal__close-btn">&plus;</button>
-      </div>
+  <!-- EDIT PROFILE MODAL -->
+  <div class="modal modal-edit-profile modal_is-closed"> <!-- TODO confirm that "modal-edit-profile is correct -->
+    <div class="modal__container">
+      <button class="modal__close-btn modal-profile-close">&plus;</button>
+      <h2 class="modal__title">Edit profile</h2>
+
+      <form class="form form_edit-profile">
+        <input class="form__input form__input-profile-name" type="text" name="name" placeholder="Name">
+        <input class="form__input form__input-profile-title" type="text" name="title" placeholder="Title">
+        <button class="form__save-btn" type="submit">Save</button>
+      </form>
     </div>
-  </template>
+  </div>
+
+  <!-- ADD CARD MODAL -->
+  <div class="modal modal-add-card modal_is-closed">
+    <div class="modal__container">
+      <button class="modal__close-btn modal-add-close">&plus;</button>
+      <h2 class="modal__title">New place</h2>
+
+const cardList = document.querySelector(".photos__grid");
+      <form class="form form_add-card">
+        <input class="form__input" type="text" name="title" placeholder="Title">
+        <input class="form__input" type="url" name="url" placeholder="Link">
+        <button class="form__save-btn form-add-save">Save</button>
+      </form>
+    </div>
+  </div>
+
+   <!-- IMAGE VIEW MODAL -->
+  <div class="modal modal-view-image modal_is-closed">
+    <div class="modal__container modal__container_size-image">
+      <button class="modal__close-btn modal-image-close">&plus;</button>
+      <p class="modal__image-title"></p>
+    </div>
+  </div>
 
   <!-- CARD TEMPLATE -->
   <template class="card-template">
