refactor: moved edit btn out of profile__name, fixed CSS

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <img class="profile__avatar" src="./images/avatar_image-min.jpg" alt="account image">
 
       <div class="profile__info">
-        <p class="profile__name">Jacques Cousteau
-          <button class="profile__edit-btn" aria-label="Profile edit"></button>
-        </p>
+        <p class="profile__name">Jacques Cousteau</p>
+
+        <button class="profile__edit-btn" aria-label="Profile edit"></button>
 
         <p class="profile__title">Explorer</p>
       </div>
@@ -39,11 +39,6 @@
   <footer class="footer">
     <p class="footer__copyright">© 2020 Around The U.S.</p>
   </footer>
-
-  <!-- EDIT PROFILE BUTTON TEMPLATE -->
-  <template class="edit-btn-template">
-    <button class="profile__edit-btn" aria-label="Profile edit"></button>
-  </template>
 
   <!-- EDIT PROFILE MODAL -->
   <div class="modal modal_type_edit-profile modal_is-closed">
