--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
     </li>
   </template>
 
-  <script src="index.js"></script>
+  <script src="./scripts/validation.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
