--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
     </li>
   </template>
 
-  <script src="./scripts/validation.js"></script>
-  <script src="./scripts/index.js"></script>
+  <!-- <script type="module" src="./scripts/validation.js"></script> -->
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
 </body>
 
 </html>
