--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </footer>
 
   <!-- EDIT PROFILE MODAL -->
-  <div class="modal modal_type_edit-profile modal_is-closed">
+  <div class="modal modal_type_edit-profile">
     <div class="modal__container">
       <button class="modal__close-btn modal_close_profile" aria-label="Close popup">&plus;</button>
       <h2 class="modal__title">Edit profile</h2>
@@ -61,7 +61,7 @@
   </div>
 
   <!-- ADD CARD MODAL -->
-  <div class="modal modal_type_add-card modal_is-closed">
+  <div class="modal modal_type_add-card">
     <div class="modal__container">
       <button class="modal__close-btn modal_close_add-card" aria-label="Close popup">&plus;</button>
       <h2 class="modal__title">New place</h2>
@@ -79,7 +79,7 @@
   </div>
 
   <!-- IMAGE VIEW MODAL -->
-  <div class="modal modal_type_image-view modal_is-closed">
+  <div class="modal modal_type_image-view">
     <div class="modal__container modal__container_size-image">
       <button class="modal__close-btn modal_close_image-view" aria-label="Close popup">&plus;</button>
       <p class="modal__image-title"></p>
