refactor: mod deletePopup to PopupWithForm, mod classes/methods accordingly

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,10 @@
       <button class="modal__close-btn modal_close_confirm-delete" aria-label="Close popup">&plus;</button>
       <h2 class="modal__title">Are you sure?</h2>
 
-      <button class="modal__confirm-delete-btn" type="button" aria-label="Confirm Card Delete">Yes</button>
+      <form class="form form_type_confirm-delete">
+        <button class="form__save-btn modal__confirm-delete-btn" type="submit"
+          aria-label="Confirm Card Delete">Yes</button>
+      </form>
     </div>
   </div>
 
