feat: mod UserInfo JS + index to prefill edit+avatar form when opened

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
       <h2 class="modal__title">Change profile picture</h2>
 
       <form class="form form_type_edit-avatar">
-        <input id="card-url" class="form__input form__input_card-url" type="url" name="avatar" placeholder="Link"
+        <input id="card-url" class="form__input form__input_avatar-update" type="url" name="avatar" placeholder="Link"
           required>
         <span id="card-url-error" class="form__error"></span>
 
